--- a/form3_t.ui
+++ b/form3_t.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>mainWindow</class>
- <widget class="QMainWindow" name="mainWindow">
+ <class>teor3</class>
+ <widget class="QMainWindow" name="teor3">
   <property name="geometry">
    <rect>
     <x>0</x>
