--- a/form1_p.ui
+++ b/form1_p.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>mainWindow</class>
- <widget class="QMainWindow" name="mainWindow">
+ <class>pract1</class>
+ <widget class="QMainWindow" name="pract1">
   <property name="geometry">
    <rect>
     <x>0</x>
