--- a/formk.ui
+++ b/formk.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>mainWindow</class>
- <widget class="QMainWindow" name="mainWindow">
+ <class>kontrless</class>
+ <widget class="QMainWindow" name="kontrless">
   <property name="geometry">
    <rect>
     <x>0</x>
