--- a/formauth.ui
+++ b/formauth.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>276</width>
-    <height>286</height>
+    <height>355</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -84,7 +84,7 @@ font-size: 25;
       <x>10</x>
       <y>50</y>
       <width>261</width>
-      <height>191</height>
+      <height>231</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -127,7 +127,7 @@ background: black;
      <property name="geometry">
       <rect>
        <x>40</x>
-       <y>160</y>
+       <y>200</y>
        <width>101</width>
        <height>16</height>
       </rect>
@@ -191,11 +191,11 @@ background: black;
       <string>Придумайте пароль:</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton">
+    <widget class="QPushButton" name="last">
      <property name="geometry">
       <rect>
        <x>60</x>
-       <y>112</y>
+       <y>160</y>
        <width>121</width>
        <height>31</height>
       </rect>
@@ -218,11 +218,11 @@ QPushButton:pressed { background: white; }</string>
       <string>Зарегистрироваться</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_2">
+    <widget class="QPushButton" name="other">
      <property name="geometry">
       <rect>
        <x>150</x>
-       <y>160</y>
+       <y>200</y>
        <width>31</width>
        <height>23</height>
       </rect>
@@ -243,6 +243,49 @@ QPushButton:pressed { background: white; }</string>
      </property>
      <property name="text">
       <string>Да!</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_5">
+     <property name="geometry">
+      <rect>
+       <x>36</x>
+       <y>120</y>
+       <width>71</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: white;</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton">
+     <property name="geometry">
+      <rect>
+       <x>130</x>
+       <y>120</y>
+       <width>101</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QPushButton {
+  display: inline-block;
+  color: white;
+  text-decoration: none;
+  user-select: none;
+  outline: none;
+  border: 2px solid white;
+  border-radius: 1px;
+  transition: 0.2s;
+} 
+QPushButton:hover { background: rgba(255,255,255,.2); }
+QPushButton:pressed { background: white; }</string>
+     </property>
+     <property name="text">
+      <string>Выбрать фото</string>
      </property>
     </widget>
    </widget>
