--- a/forminp.ui
+++ b/forminp.ui
@@ -123,7 +123,7 @@ background: black;
       <string>TextLabel</string>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit">
+    <widget class="QLineEdit" name="login">
      <property name="geometry">
       <rect>
        <x>100</x>
@@ -133,7 +133,7 @@ background: black;
       </rect>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_2">
+    <widget class="QLineEdit" name="password">
      <property name="geometry">
       <rect>
        <x>100</x>
@@ -175,7 +175,7 @@ background: black;
       <string>Введите пароль:</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton">
+    <widget class="QPushButton" name="enter">
      <property name="geometry">
       <rect>
        <x>80</x>
