Формочки входа и ошибок

--- a/formauth.ui
+++ b/formauth.ui
@@ -153,7 +153,7 @@ background: black;
      <property name="geometry">
       <rect>
        <x>120</x>
-       <y>80</y>
+       <y>100</y>
        <width>113</width>
        <height>20</height>
       </rect>
@@ -179,7 +179,7 @@ background: black;
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>60</y>
+       <y>80</y>
        <width>121</width>
        <height>16</height>
       </rect>
@@ -245,11 +245,11 @@ QPushButton:pressed { background: white; }</string>
       <string>Да!</string>
      </property>
     </widget>
-    <widget class="QLabel" name="label_5">
+    <widget class="QLabel" name="naming">
      <property name="geometry">
       <rect>
        <x>36</x>
-       <y>120</y>
+       <y>130</y>
        <width>71</width>
        <height>20</height>
       </rect>
@@ -265,7 +265,7 @@ QPushButton:pressed { background: white; }</string>
      <property name="geometry">
       <rect>
        <x>130</x>
-       <y>120</y>
+       <y>130</y>
        <width>101</width>
        <height>23</height>
       </rect>
@@ -286,6 +286,22 @@ QPushButton:pressed { background: white; }</string>
      </property>
      <property name="text">
       <string>Выбрать фото</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="error">
+     <property name="geometry">
+      <rect>
+       <x>16</x>
+       <y>50</y>
+       <width>231</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color:white;</string>
+     </property>
+     <property name="text">
+      <string/>
      </property>
     </widget>
    </widget>
