--- a/formerror.ui
+++ b/formerror.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>276</width>
-    <height>192</height>
+    <height>228</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -84,7 +84,7 @@ font-size: 25;
       <x>10</x>
       <y>50</y>
       <width>261</width>
-      <height>91</height>
+      <height>101</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -136,15 +136,15 @@ background: black;
       <string notr="true">color:white;</string>
      </property>
      <property name="text">
-      <string>Увы! Такой логин уже есть, придумайте новый!</string>
+      <string>Увы! Допущена ошибка!</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton">
+    <widget class="QPushButton" name="teor">
      <property name="geometry">
       <rect>
-       <x>100</x>
-       <y>40</y>
-       <width>61</width>
+       <x>10</x>
+       <y>60</y>
+       <width>111</width>
        <height>31</height>
       </rect>
      </property>
@@ -163,7 +163,50 @@ QPushButton:hover { background: rgba(255,255,255,.2); }
 QPushButton:pressed { background: white; }</string>
      </property>
      <property name="text">
-      <string>Хорошо!</string>
+      <string>Вернуться к теории</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="repeat">
+     <property name="geometry">
+      <rect>
+       <x>130</x>
+       <y>60</y>
+       <width>121</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QPushButton {
+  display: inline-block;
+  color: white;
+  text-decoration: none;
+  user-select: none;
+  outline: none;
+  border: 2px solid white;
+  border-radius: 1px;
+  transition: 0.2s;
+} 
+QPushButton:hover { background: rgba(255,255,255,.2); }
+QPushButton:pressed { background: white; }</string>
+     </property>
+     <property name="text">
+      <string>Попробовать еще раз</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_2">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>30</y>
+       <width>251</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color:white;</string>
+     </property>
+     <property name="text">
+      <string>Перепройдите теорию или попробуйте еще раз.</string>
      </property>
     </widget>
    </widget>
