--- a/forminp.ui
+++ b/forminp.ui
@@ -84,7 +84,7 @@ font-size: 25;
       <x>10</x>
       <y>50</y>
       <width>241</width>
-      <height>181</height>
+      <height>221</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -137,7 +137,7 @@ background: black;
      <property name="geometry">
       <rect>
        <x>100</x>
-       <y>80</y>
+       <y>100</y>
        <width>113</width>
        <height>20</height>
       </rect>
@@ -163,7 +163,7 @@ background: black;
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>60</y>
+       <y>80</y>
        <width>121</width>
        <height>16</height>
       </rect>
@@ -179,7 +179,7 @@ background: black;
      <property name="geometry">
       <rect>
        <x>80</x>
-       <y>112</y>
+       <y>150</y>
        <width>71</width>
        <height>31</height>
       </rect>
@@ -206,7 +206,7 @@ QPushButton:pressed { background: white; }</string>
      <property name="geometry">
       <rect>
        <x>60</x>
-       <y>150</y>
+       <y>190</y>
        <width>111</width>
        <height>23</height>
       </rect>
@@ -227,6 +227,38 @@ QPushButton:pressed { background: white; }</string>
      </property>
      <property name="text">
       <string>Вернуться назад</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="passerror">
+     <property name="geometry">
+      <rect>
+       <x>100</x>
+       <y>120</y>
+       <width>121</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color:white;</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QLabel" name="logerror">
+     <property name="geometry">
+      <rect>
+       <x>60</x>
+       <y>50</y>
+       <width>161</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color:white;</string>
+     </property>
+     <property name="text">
+      <string/>
      </property>
     </widget>
    </widget>
